--- a/biaodanluru.html
+++ b/biaodanluru.html
@@ -48,20 +48,11 @@
 				 	<a class="mui-navigate-right" href="#">品质</a>
 				 	<div class="mui-collapse-content">
 				 		<ul class="mui-table-view">
-				 			<li class="mui-table-view-cell pro" id="pinzhi_kongtongceliang">
-				 				<a class="mui-navigate-right">孔铜测量</a>
-				 			</li>
-				 			<li class="mui-table-view-cell pro" id="pinzhi_dutongqiepian">
-				 				<a class="mui-navigate-right">镀铜切片</a>
-				 			</li>
 				 			<li class="mui-table-view-cell pro" id="pinzhi_neicengxkxj">
 				 				<a class="mui-navigate-right">内层线宽线距</a>
 				 			</li>
-				 			<li class="mui-table-view-cell pro" id="waixing_shike">
+				 			<li class="mui-table-view-cell pro" id="waiceng_shike">
 				 				<a class="mui-navigate-right">外层蚀刻检验</a>
-				 			</li>
-				 			<li class="mui-table-view-cell pro" id="pinzhi_waicengxkxj">
-				 				<a class="mui-navigate-right">外层线宽线距</a>
 				 			</li>
 				 			<li class="mui-table-view-cell pro" id="pinzhi_shikehoukongjing">
 				 				<a class="mui-navigate-right">蚀刻后孔径</a>
@@ -84,15 +75,6 @@
 				 			<li class="mui-table-view-cell pro" id="pinzhi_fuzhuoliceshi">
 				 				<a class="mui-navigate-right">附着力测试</a>
 				 			</li>
-				 			<li class="mui-table-view-cell pro" id="pinzhi_AVI">
-				 				<a class="mui-navigate-right">AVI日报</a>
-				 			</li>
-				 			<li class="mui-table-view-cell pro" id="pinzhi_banqiaoqu">
-				 				<a class="mui-navigate-right">板翘曲检查</a>
-				 			</li>
-				 			<li class="mui-table-view-cell pro" id="pinzhi_zhongjianxiuban">
-				 				<a class="mui-navigate-right">终检修板</a>
-				 			</li>
 				 			<li class="mui-table-view-cell pro" id="zuankong_shoujian">
 				 				<a class="mui-navigate-right">钻孔首检</a>
 				 			</li>
@@ -107,15 +89,6 @@
 				 			</li>
 				 			<li class="mui-table-view-cell pro" id="yahe_banhou">
 				 				<a class="mui-navigate-right">压合板厚</a>
-				 			</li>
-				 			<li class="mui-table-view-cell pro" id="yahe_qiepian">
-				 				<a class="mui-navigate-right">压合切片</a>
-				 			</li>
-				 			<li class="mui-table-view-cell pro" id="tudu_zhuzhuangjing">
-				 				<a class="mui-navigate-right">镀铜柱状晶</a>
-				 			</li>
-				 			<li class="mui-table-view-cell pro" id="wulishi_beiguang">
-				 				<a class="mui-navigate-right">背光测试</a>
 				 			</li>
 				 		</ul>
 				 	</div>
@@ -153,6 +126,9 @@
 						<a class="mui-navigate-right" href="#">压合</a>
 						<div class="mui-collapse-content">
 							<ul class="mui-table-view">
+								<li class="mui-table-view-cell pro" id="yahe_qiepian">
+									<a class="mui-navigate-right">压合切片</a>
+								</li>
 								<li class="mui-table-view-cell pro" id="yahe_paiban">
 									<a class="mui-navigate-right">压合排版</a>
 								</li>
@@ -178,6 +154,12 @@
 						<a class="mui-navigate-right" href="#">电镀</a>
 						<div class="mui-collapse-content">
 							<ul class="mui-table-view">
+								<li class="mui-table-view-cell pro" id="pinzhi_kongtongceliang">
+									<a class="mui-navigate-right">孔铜测量</a>
+								</li>
+								<li class="mui-table-view-cell pro" id="pinzhi_dutongqiepian">
+									<a class="mui-navigate-right">镀铜切片</a>
+								</li>
 								<li class="mui-table-view-cell pro" id="bandu_fangong">
 									<a class="mui-navigate-right">返工</a>
 								</li>
@@ -240,6 +222,9 @@
 							<ul class="mui-table-view">
 								<li class="mui-table-view-cell pro" id="tudu_shengchan">
 									<a class="mui-navigate-right">生产</a>
+								</li>
+								<li class="mui-table-view-cell pro" id="tudu_zhuzhuangjing">
+									<a class="mui-navigate-right">镀铜柱状晶</a>
 								</li>
 							</ul>
 						</div>
@@ -309,11 +294,37 @@
 						</div>
 					</li>
 					<li class="mui-table-view-cell mui-collapse">
+						<a class="mui-navigate-right" href="#">FQC</a>
+						<div class="mui-collapse-content">
+							<ul class="mui-table-view">
+								<li class="mui-table-view-cell pro" id="pinzhi_AVI">
+									<a class="mui-navigate-right">AVI日报</a>
+								</li>
+								<li class="mui-table-view-cell pro" id="pinzhi_banqiaoqu">
+									<a class="mui-navigate-right">板翘曲检查</a>
+								</li>
+								<li class="mui-table-view-cell pro" id="pinzhi_zhongjianxiuban">
+									<a class="mui-navigate-right">终检修板</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li class="mui-table-view-cell mui-collapse">
 						<a class="mui-navigate-right" href="#">二级仓</a>
 						<div class="mui-collapse-content">
 							<ul class="mui-table-view">
 								<li class="mui-table-view-cell pro" id="zuankong_zuanzhuicaodao">
 									<a class="mui-navigate-right">钻咀槽刀发放</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li class="mui-table-view-cell mui-collapse">
+						<a class="mui-navigate-right" href="#">物理室</a>
+						<div class="mui-collapse-content">
+							<ul class="mui-table-view">
+								<li class="mui-table-view-cell pro" id="wulishi_beiguang">
+									<a class="mui-navigate-right">背光测试</a>
 								</li>
 							</ul>
 						</div>
