--- a/kailiao/ribao.html
+++ b/kailiao/ribao.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/app.js"></script>
 	</head>
@@ -147,6 +148,115 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				plateSupplier: document.getElementById("plateSupplier").value || '',
+				plateLot: document.getElementById("plateLot").value || '',
+				inputNum: document.getElementById("inputNum").value || '',
+				plateSpec: document.getElementById("plateSpec").value || '',
+				reqSize: document.getElementById("reqSize").value || '',
+				trimSize: document.getElementById("trimSize").value || '',
+				cutInmeters: document.getElementById("cutInmeters").value || '',
+				cumuCutInmeters: document.getElementById("cumuCutInmeters").value || '',
+				operator: document.getElementById("operator").value || ''
+			}
+			if (information.plateSupplier.length < 1 || information.plateLot.length < 1 ||
+				information.inputNum.length < 1 || information.plateSpec.length < 1 ||
+				information.reqSize.length < 1 || information.trimSize.length < 1 ||
+				information.cutInmeters.length < 1 || information.cumuCutInmeters.length < 1 ||
+				information.operator.length < 1) {
+				var color = "#F9F900";
+				if (information.plateSupplier.length < 1)
+					$("#plateSupplier").css("background-color", color);
+				if (information.plateLot.length < 1)
+					$("#plateLot").css("background-color", color);
+				if (information.inputNum.length < 1)
+					$("#inputNum").css("background-color", color);
+				if (information.plateSpec.length < 1)
+					$("#plateSpec").css("background-color", color);
+				if (information.reqSize.length < 1)
+					$("#reqSize").css("background-color", color);
+				if (information.trimSize.length < 1)
+					$("#trimSize").css("background-color", color);
+				if (information.cutInmeters.length < 1)
+					$("#cutInmeters").css("background-color", color);
+				if (information.cumuCutInmeters.length < 1)
+					$("#cumuCutInmeters").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+				factoryName = facarr[document.getElementById("factoryName").value];
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					plateSupplier: document.getElementById("plateSupplier").value,
+					plateLot: document.getElementById("plateLot").value,
+					inputNum: document.getElementById("inputNum").value,
+					plateSpec: document.getElementById("plateSpec").value,
+					reqSize: document.getElementById("reqSize").value,
+					trimSize: document.getElementById("trimSize").value,
+					cutInmeters: document.getElementById("cutInmeters").value,
+					cumuCutInmeters: document.getElementById("cumuCutInmeters").value,
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				// for(var key in data){
+				// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
+				// 		mui.alert("必填项不能为空");
+				// 		return;
+				// 	}
+				// }
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=2',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
 		(function($, doc) {
 			//初始化 scan页
 			$.init({
@@ -320,76 +430,6 @@
 				document.getElementById("factoryName").value = state.changbie;
 				document.getElementById("operator").value = state.username;
 
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-					factoryName = facarr[document.getElementById("factoryName").value];
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						plateSupplier: document.getElementById("plateSupplier").value,
-						plateLot: document.getElementById("plateLot").value,
-						inputNum: document.getElementById("inputNum").value,
-						plateSpec: document.getElementById("plateSpec").value,
-						reqSize: document.getElementById("reqSize").value,
-						trimSize: document.getElementById("trimSize").value,
-						cutInmeters: document.getElementById("cutInmeters").value,
-						cumuCutInmeters: document.getElementById("cumuCutInmeters").value,
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					// for(var key in data){
-					// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
-					// 		mui.alert("必填项不能为空");
-					// 		return;
-					// 	}
-					// }
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=2',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
 						return;
