--- a/neiceng/AOIpinzhi.html
+++ b/neiceng/AOIpinzhi.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
@@ -204,6 +205,185 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			document.querySelectorAll("input[name='decide']").forEach(function(el) {
+				if (el.checked)
+					decide = el.value;
+			})
+			var information = {
+				pcbLayerNo: document.getElementById("pcbLayerNo").value || '',
+				okQty: document.getElementById("okQty").value || '',
+				checkQty: document.getElementById("checkQty").value || '',
+				okYield: document.getElementById("okYield").value || '',
+				openPosition: document.getElementById("openPosition").value || '',
+				openDisperse: document.getElementById("openDisperse").value || '',
+				shortoutPosition: document.getElementById("shortoutPosition").value || '',
+				shortoutDisperse: document.getElementById("shortoutDisperse").value || '',
+				operator: document.getElementById("operator").value || '',
+				gapPosition: document.getElementById("gapPosition").value || '',
+				gapDisperse: document.getElementById("gapDisperse").value || '',
+				residualCopperPosition: document.getElementById("residualCopperPosition").value || '',
+				residualCopperDisperse: document.getElementById("residualCopperDisperse").value || '',
+				chafed: document.getElementById("chafed").value || '',
+				pinhole: document.getElementById("pinhole").value || '',
+				exposeBad: document.getElementById("exposeBad").value || '',
+				overDevelopment: document.getElementById("overDevelopment").value || '',
+				underEtching: document.getElementById("underEtching").value || '',
+				others: document.getElementById("others").value || '',
+				decide: decide || ''
+			}
+			if (information.pcbLayerNo.length < 1 || information.okQty.length < 1 ||
+				information.checkQty.length < 1 || information.okYield.length < 1 ||
+				information.openPosition.length < 1 || information.openDisperse.length < 1 ||
+				information.shortoutPosition.length < 1 || information.shortoutDisperse.length < 1 ||
+				information.operator.length < 1 || information.gapPosition.length < 1 ||
+				information.gapDisperse.length < 1 || information.residualCopperPosition.length < 1 ||
+				information.residualCopperDisperse.length < 1 || information.chafed.length < 1 ||
+				information.pinhole.length < 1 || information.exposeBad.length < 1 ||
+				information.overDevelopment.length < 1 || information.underEtching.length < 1|| 
+				information.others.length < 1 || information.decide.length < 1) {
+				var color = "#F9F900";
+				if (information.pcbLayerNo.length < 1)
+					$("#pcbLayerNo").css("background-color", color);
+				if (information.okQty.length < 1)
+					$("#okQty").css("background-color", color);
+				if (information.checkQty.length < 1)
+					$("#checkQty").css("background-color", color);
+				if (information.okYield.length < 1)
+					$("#okYield").css("background-color", color);
+				if (information.openPosition.length < 1)
+					$("#openPosition").css("background-color", color);
+				if (information.openDisperse.length < 1)
+					$("#openDisperse").css("background-color", color);
+				if (information.shortoutPosition.length < 1)
+					$("#shortoutPosition").css("background-color", color);
+				if (information.shortoutDisperse.length < 1)
+					$("#shortoutDisperse").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				if (information.gapPosition.length < 1)
+					$("#gapPosition").css("background-color", color);
+				if(information.gapDisperse.length < 1)
+					$("#gapDisperse").css("background-color",color);
+				if(information.residualCopperPosition.length < 1)
+					$("#residualCopperPosition").css("background-color",color);
+				if(information.residualCopperDisperse.length < 1)
+					$("#residualCopperDisperse").css("background-color",color);
+				if(information.chafed.length < 1)
+					$("#chafed").css("background-color",color);
+				if(information.pinhole.length < 1)
+					$("#pinhole").css("background-color",color);
+				if(information.exposeBad.length < 1)
+					$("#exposeBad").css("background-color",color);
+				if(information.overDevelopment.length < 1)
+					$("#overDevelopment").css("background-color",color);
+				if(information.underEtching.length < 1)
+					$("#underEtching").css("background-color",color);
+				if(information.others.length < 1)
+					$("#others").css("background-color",color);
+				if(information.decide.length < 1)
+					$("#decide").css("background-color",color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+				var iscopper;
+				var speccut;
+				var decide;
+				var checkType;
+				var rejectitem = [];
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+				factoryName = facarr[document.getElementById("factoryName").value];
+				document.querySelectorAll("input[name='checkType']").forEach(function(el) {
+					if (el.checked)
+						checkType = el.checkType;
+				})
+				document.querySelectorAll("input[name='rejectitem']").forEach(function(el) {
+					if (el.checked)
+						rejectitem.push(el.value);
+				})
+
+
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					checkQty: document.getElementById("checkQty").value,
+					pcbLayerNo: document.getElementById("pcbLayerNo").value,
+					okQty: document.getElementById("okQty").value,
+					okYield: document.getElementById("okYield").value,
+					openPosition: document.getElementById("openPosition").value,
+					openDisperse: document.getElementById("openDisperse").value,
+					shortoutPosition: document.getElementById("shortoutPosition").value,
+					shortoutDisperse: document.getElementById("shortoutDisperse").value,
+					gapPosition: document.getElementById("gapPosition").value,
+					gapDisperse: document.getElementById("gapDisperse").value,
+
+					residualCopperPosition: document.getElementById("residualCopperPosition").value,
+					residualCopperDisperse: document.getElementById("residualCopperDisperse").value,
+					chafed: document.getElementById("chafed").value,
+					pinhole: document.getElementById("pinhole").value,
+					exposeBad: document.getElementById("exposeBad").value,
+					overDevelopment: document.getElementById("overDevelopment").value,
+					underEtching: document.getElementById("underEtching").value,
+					others: document.getElementById("others").value,
+
+					decide: decide,
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				// for(var key in data){
+				// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
+				// 		mui.alert("必填项不能为空");
+				// 		return;
+				// 	}
+				// }
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=88',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		(function($, doc) {
 			//初始化 scan页
 			$.init({
@@ -251,7 +431,7 @@
 							document.getElementById("lot").value = data.app.lot;
 							document.getElementById("datecode").value = data.app.datecode;
 							document.getElementById("d06rkey").value = data.app.d06rkey;
-				
+
 							// document.getElementById("artworkNo").value = data.app.mfg;
 						} else {
 							mui.alert(data.mess);
@@ -261,7 +441,7 @@
 						//异常处理
 						if (type == "timeout")
 							$.toast('连接超时，请检查网络')
-				
+
 						$.toast('系统异常，请检查是否连接jove-wifi')
 					}
 				})
@@ -402,108 +582,6 @@
 					}
 				}
 				// document.getElementById("checkTime").addEventListener('tap',pickerf);
-
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-					var iscopper;
-					var speccut;
-					var decide;
-					var checkType;
-					var rejectitem = [];
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-					factoryName = facarr[document.getElementById("factoryName").value];
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-					document.querySelectorAll("input[name='checkType']").forEach(function(el) {
-						if (el.checked)
-							checkType = el.checkType;
-					})
-					document.querySelectorAll("input[name='rejectitem']").forEach(function(el) {
-						if (el.checked)
-							rejectitem.push(el.value);
-					})
-
-
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						checkQty: document.getElementById("checkQty").value,
-						pcbLayerNo: document.getElementById("pcbLayerNo").value,
-						okQty: document.getElementById("okQty").value,
-						okYield: document.getElementById("okYield").value,
-						openPosition: document.getElementById("openPosition").value,
-						openDisperse: document.getElementById("openDisperse").value,
-						shortoutPosition: document.getElementById("shortoutPosition").value,
-						shortoutDisperse: document.getElementById("shortoutDisperse").value,
-						gapPosition: document.getElementById("gapPosition").value,
-						gapDisperse: document.getElementById("gapDisperse").value,
-
-						residualCopperPosition: document.getElementById("residualCopperPosition").value,
-						residualCopperDisperse: document.getElementById("residualCopperDisperse").value,
-						chafed: document.getElementById("chafed").value,
-						pinhole: document.getElementById("pinhole").value,
-						exposeBad: document.getElementById("exposeBad").value,
-						overDevelopment: document.getElementById("overDevelopment").value,
-						underEtching: document.getElementById("underEtching").value,
-						others: document.getElementById("others").value,
-
-						decide: decide,
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					// for(var key in data){
-					// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
-					// 		mui.alert("必填项不能为空");
-					// 		return;
-					// 	}
-					// }
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=88',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
