--- a/wulishi/beiguang.html
+++ b/wulishi/beiguang.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
@@ -148,6 +149,125 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var decide;
+			document.querySelectorAll("input[name='decide']").forEach(function(el) {
+				if (el.checked)
+					decide = el.value;
+			})
+			var information = {
+				dyelotNumber: document.getElementById("dyelotNumber").value || '',
+				pcbHierarchy: document.getElementById("pcbHierarchy").value || '',
+				checkQty: document.getElementById("checkQty").value || '',
+				plateThinck: document.getElementById("plateThinck").value || '',
+				minHole: document.getElementById("minHole").value || '',
+				backlightSeries: document.getElementById("backlightSeries").value || '',
+				sampleTime: document.getElementById("sampleTime").innerHTML || '',
+				decide: decide || '',
+				operator: document.getElementById("operator").value || ''
+			}
+			if (information.dyelotNumber.length < 1 || information.pcbHierarchy.length < 1 ||
+				information.checkQty.length < 1 || information.plateThinck.length < 1 ||
+				information.minHole.length < 1 || information.backlightSeries.length < 1 ||
+				information.sampleTime.length < 1 || information.decide.length < 1 ||
+				information.operator.length < 1 ) {
+				var color = "#F9F900";
+				if (information.dyelotNumber.length < 1)
+					$("#dyelotNumber").css("background-color", color);
+				if (information.pcbHierarchy.length < 1)
+					$("#pcbHierarchy").css("background-color", color);
+				if (information.checkQty.length < 1)
+					$("#checkQty").css("background-color", color);
+				if (information.plateThinck.length < 1)
+					$("#plateThinck").css("background-color", color);
+				if (information.minHole.length < 1)
+					$("#minHole").css("background-color", color);
+				if (information.backlightSeries.length < 1)
+					$("#backlightSeries").css("background-color", color);
+				if (information.sampleTime.length < 1)
+					$("#sampleTime").css("background-color", color);
+				if (information.decide.length < 1)
+					$("#decide").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+				var iscopper;
+				var speccut;
+				var rejectitem = [];
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+				factoryName = facarr[document.getElementById("factoryName").value];
+
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					dyelotNumber: document.getElementById("dyelotNumber").value,
+					pcbHierarchy: document.getElementById("pcbHierarchy").value,
+					checkQty: document.getElementById("checkQty").value,
+					plateThinck: document.getElementById("plateThinck").value,
+					minHole: document.getElementById("minHole").value,
+					backlightSeries: document.getElementById("backlightSeries").value,
+					sampleTime: document.getElementById("sampleTime").innerHTML,
+
+					decide: decide,
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				// for(var key in data){
+				// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
+				// 		mui.alert("必填项不能为空");
+				// 		return;
+				// 	}
+				// }
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=18',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		(function($, doc) {
 			//初始化 scan页
 			$.init({
@@ -179,7 +299,7 @@
 							document.getElementById("lot").value = data.app.lot;
 							document.getElementById("datecode").value = data.app.datecode;
 							document.getElementById("d06rkey").value = data.app.d06rkey;
-					
+
 							document.getElementById("plateThinck").value = data.app.platethickness;
 							document.getElementById("minHole").value = data.app.minholesize;
 						} else {
@@ -190,7 +310,7 @@
 						//异常处理
 						if (type == "timeout")
 							$.toast('连接超时，请检查网络')
-					
+
 						$.toast('系统异常，请检查是否连接jove-wifi')
 					}
 				})
@@ -335,85 +455,6 @@
 				var current = date.getFullYear() + "-" + pad((date.getMonth() + 1).toString(), 2) + "-" + pad(date.getDate(), 2);
 				current += " " + pad(date.getHours(), 2) + ":" + pad(date.getMinutes(), 2);
 				document.getElementById("sampleTime").innerHTML = current;
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-					var iscopper;
-					var speccut;
-					var decide;
-					var rejectitem = [];
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-					factoryName = facarr[document.getElementById("factoryName").value];
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						dyelotNumber: document.getElementById("dyelotNumber").value,
-						pcbHierarchy: document.getElementById("pcbHierarchy").value,
-						checkQty: document.getElementById("checkQty").value,
-						plateThinck: document.getElementById("plateThinck").value,
-						minHole: document.getElementById("minHole").value,
-						backlightSeries: document.getElementById("backlightSeries").value,
-						sampleTime: document.getElementById("sampleTime").innerHTML,
-
-						decide: decide,
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					// for(var key in data){
-					// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
-					// 		mui.alert("必填项不能为空");
-					// 		return;
-					// 	}
-					// }
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=18',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
