--- a/yahe/qiepian.html
+++ b/yahe/qiepian.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<script src="../js/app.js"></script>
@@ -202,6 +203,123 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			copperThickPlies = document.getElementById("copperThickPlies");
+			prepregThickPlies = document.getElementById("prepregThickPlies");
+			isEligibility = document.getElementById("isEligibility");
+			var decide;
+			document.querySelectorAll("input[name='decide']").forEach(function(el) {
+				if (el.checked)
+					decide = el.value;
+			})
+			var information = {
+				copperThickPlies: copperThickPlies.options[copperThickPlies.selectedIndex].value || '',
+				prepregThickPlies: prepregThickPlies.options[prepregThickPlies.selectedIndex].value || '',
+				isEligibility: isEligibility.options[isEligibility.selectedIndex].value || '',
+				copperThickRequire: document.getElementById("copperThickRequire").value || '',
+				copperThickMeasure: document.getElementById("copperThickMeasure").value || '',
+				prepregThickRequire: document.getElementById("prepregThickRequire").value || '',
+				prepregThickMeasure: document.getElementById("prepregThickMeasure").value || '',
+				ppStackup: document.getElementById("ppStackup").value || '',
+				operator: document.getElementById("operator").value || '',
+				decide: decide || ''
+			}
+			if (information.copperThickPlies.length < 1 || information.prepregThickPlies.length < 1 ||
+				information.isEligibility.length < 1 || information.copperThickRequire.length < 1 ||
+				information.copperThickMeasure.length < 1 || information.prepregThickRequire.length < 1 ||
+				information.prepregThickMeasure.length < 1 || information.ppStackup.length < 1 ||
+				information.operator.length < 1 || information.decide.length < 1) {
+				var color = "#F9F900";
+				if (information.copperThickPlies.length < 1)
+					$("#copperThickPlies").css("background-color", color);
+				if (information.prepregThickPlies.length < 1)
+					$("#prepregThickPlies").css("background-color", color);
+				if (information.isEligibility.length < 1)
+					$("#isEligibility").css("background-color", color);
+				if (information.copperThickRequire.length < 1)
+					$("#copperThickRequire").css("background-color", color);
+				if (information.copperThickMeasure.length < 1)
+					$("#copperThickMeasure").css("background-color", color);
+				if (information.prepregThickRequire.length < 1)
+					$("#prepregThickRequire").css("background-color", color);
+				if (information.prepregThickMeasure.length < 1)
+					$("#prepregThickMeasure").css("background-color", color);
+				if (information.ppStackup.length < 1)
+					$("#ppStackup").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				if (information.decide.length < 1)
+					$("#decide").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+				
+				factoryName = facarr[document.getElementById("factoryName").value];
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					copperThickPlies: copperThickPlies.options[copperThickPlies.selectedIndex].value,
+					prepregThickPlies: prepregThickPlies.options[prepregThickPlies.selectedIndex].value,
+					isEligibility: isEligibility.options[isEligibility.selectedIndex].value,
+
+					copperThickRequire: document.getElementById("copperThickRequire").value,
+					copperThickMeasure: document.getElementById("copperThickMeasure").value,
+					prepregThickRequire: document.getElementById("prepregThickRequire").value,
+					prepregThickMeasure: document.getElementById("prepregThickMeasure").value,
+					ppStackup: document.getElementById("ppStackup").value,
+					decide: decide,
+
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=74',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false,
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		function pad(num, n) {
 			var len = num.toString().length;
 			while (len < n) {
@@ -370,81 +488,6 @@
 				// }
 				// document.getElementById("inputTime").addEventListener('tap',pickerf);
 				// document.getElementById("outputTime").addEventListener('tap',pickerf);
-
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-					var decide;
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-
-					copperThickPlies = document.getElementById("copperThickPlies");
-					prepregThickPlies = document.getElementById("prepregThickPlies");
-					isEligibility = document.getElementById("isEligibility");
-					factoryName = facarr[document.getElementById("factoryName").value];
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						copperThickPlies: copperThickPlies.options[copperThickPlies.selectedIndex].value,
-						prepregThickPlies: prepregThickPlies.options[prepregThickPlies.selectedIndex].value,
-						isEligibility: isEligibility.options[isEligibility.selectedIndex].value,
-
-						copperThickRequire: document.getElementById("copperThickRequire").value,
-						copperThickMeasure: document.getElementById("copperThickMeasure").value,
-						prepregThickRequire: document.getElementById("prepregThickRequire").value,
-						prepregThickMeasure: document.getElementById("prepregThickMeasure").value,
-						ppStackup: document.getElementById("ppStackup").value,
-						decide: decide,
-
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=74',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false,
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
