--- a/zuankong/zuanzhuicaodao.html
+++ b/zuankong/zuanzhuicaodao.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<script src="../js/app.js"></script>
@@ -160,6 +161,126 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				machineNo: document.getElementById("machineNo").value || '',
+				knifeScheme: document.getElementById("knifeScheme").value || '',
+				specKnife: document.getElementById("specKnife").value || '',
+				knifeQty: document.getElementById("knifeQty").value || '',
+				knifeLen: document.getElementById("knifeLen").value || '',
+				grindTime: document.getElementById("grindTime").value || '',
+				stockPart: document.getElementById("stockPart").value || '',
+				cutKnifeQty: document.getElementById("cutKnifeQty").value || '',
+				backTime: document.getElementById("backTime").innerHTML || '',
+				backKnifeQty: document.getElementById("backKnifeQty").value || '',
+				signer: document.getElementById("signer").value || ''
+			}
+			if (information.machineNo.length < 1 || information.knifeScheme.length < 1 ||
+				information.specKnife.length < 1 || information.knifeQty.length < 1 ||
+				information.knifeLen.length < 1 || information.grindTime.length < 1 ||
+				information.stockPart.length < 1 || information.cutKnifeQty.length < 1 ||
+				information.backTime.length < 1 || information.backKnifeQty.length < 1 ||
+				information.signer.length < 1) {
+				var color = "#F9F900";
+				if (information.machineNo.length < 1)
+					$("#machineNo").css("background-color", color);
+				if (information.knifeScheme.length < 1)
+					$("#knifeScheme").css("background-color", color);
+				if (information.specKnife.length < 1)
+					$("#specKnife").css("background-color", color);
+				if (information.knifeQty.length < 1)
+					$("#knifeQty").css("background-color", color);
+				if (information.knifeLen.length < 1)
+					$("#knifeLen").css("background-color", color);
+				if (information.grindTime.length < 1)
+					$("#grindTime").css("background-color", color);
+				if (information.stockPart.length < 1)
+					$("#stockPart").css("background-color", color);
+				if (information.cutKnifeQty.length < 1)
+					$("#cutKnifeQty").css("background-color", color);
+				if (information.backTime.length < 1)
+					$("#backTime").css("background-color", color);
+				if (information.backKnifeQty.length < 1)
+					$("#backKnifeQty").css("background-color", color);
+				if(information.signer.length < 1)
+					$("#signer").css("background-color",color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+
+				var decide;
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+
+				factoryName = facarr[document.getElementById("factoryName").value];
+				document.querySelectorAll("input[name='isSatiation']").forEach(function(el) {
+					if (el.checked)
+						decide = el.value;
+				})
+
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					machineNo: document.getElementById("machineNo").value,
+					knifeScheme: document.getElementById("knifeScheme").value,
+					specKnife: document.getElementById("specKnife").value,
+					knifeQty: document.getElementById("knifeQty").value,
+					knifeLen: document.getElementById("knifeLen").value,
+					grindTime: document.getElementById("grindTime").value,
+					stockPart: document.getElementById("stockPart").value,
+					cutKnifeQty: document.getElementById("cutKnifeQty").value,
+					backKnifeQty: document.getElementById("backKnifeQty").value,
+					backTime: document.getElementById("backTime").innerHTML,
+
+					signer: document.getElementById("signer").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=76',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		function pad(num, n) {
 			var len = num.toString().length;
 			while (len < n) {
@@ -219,7 +340,7 @@
 							document.getElementById("lot").value = data.app.lot;
 							document.getElementById("datecode").value = data.app.datecode;
 							document.getElementById("d06rkey").value = data.app.d06rkey;
-					
+
 							// document.getElementById("prodQty").value = data.app.quanpanel;
 						} else {
 							mui.alert(data.mess);
@@ -230,7 +351,7 @@
 						//异常处理
 						if (type == "timeout")
 							$.toast('连接超时，请检查网络')
-					
+
 						$.toast('系统异常，请检查是否连接jove-wifi')
 					}
 				})
@@ -391,80 +512,6 @@
 				// document.querySelectorAll(".meashuju").forEach(function(el){
 				// 	el.addEventListener('change',cal)
 				// })
-
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-
-					var decide;
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-
-					factoryName = facarr[document.getElementById("factoryName").value];
-					document.querySelectorAll("input[name='isSatiation']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						machineNo: document.getElementById("machineNo").value,
-						knifeScheme: document.getElementById("knifeScheme").value,
-						specKnife: document.getElementById("specKnife").value,
-						knifeQty: document.getElementById("knifeQty").value,
-						knifeLen: document.getElementById("knifeLen").value,
-						grindTime: document.getElementById("grindTime").value,
-						stockPart: document.getElementById("stockPart").value,
-						cutKnifeQty: document.getElementById("cutKnifeQty").value,
-						backKnifeQty: document.getElementById("backKnifeQty").value,
-						backTime: document.getElementById("backTime").innerHTML,
-
-						signer: document.getElementById("signer").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=76',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
